# full-stack-fastapi-template

./: .cursor-config.json  .cursorignore  .cursorrules  .dockerignore  .editorconfig  .env  .env.example  .env.jinja  .env.test  .example.env  .gitattributes  .gitignore  .pre-commit-config.yaml  .windsurf.config.json  AGENTS.MD  AGENTS.md  AI_PROJECT_RULES.md  ARCHITECTURE.md  BUGS.md  CHANGELOG.md  CHANGELOG_MULTILANG_ADMIN.md  CHECKLIST_PROJECT.md  CHECKLIST_UI_IMPROVEMENTS.md  CLAUDE.md  CONTRIBUTING.md  Citi AI Use Case.docx  DEPLOYMENT-README.md  DEPLOYMENT.md  DEPLOYMENT_GUIDE.md  DEVELOPMENT-DEV.md  DEVELOPMENT_GUIDE.md  DOCKERFILE_EVALUATION.md  DOCKER_CONTRIBUTION_SUMMARY.md  DOCKER_OPTIMIZATIONS.md  DOCKER_TROUBLESHOOTING.md  DOKPLOY-FINAL.md  Dockerfile  Dockerfile.clean  Dockerfile.dokploy  Dockerfile.dokploy.optimized  (+110 more)
backend/: .coveragerc  .dockerignore  .env  .env.beta  .env.development  .env.docker  .env.example  .env.prod  .env.railway  .env.temp  .gitignore  .python-version  BLACKBOX_TESTS.md  CHANGELOG.md  CLAUDE.md  CODE_STYLE_GUIDE.md  COLPALI_README.md  DB_SETUP.md  DEVELOPMENT.md  Dockerfile  Dockerfile.celery  EVENT_SYSTEM.md  EXTENDING_ARCHITECTURE.md  INVENTORY_DATABASE_SCHEMA.md  INVENTORY_SYSTEM_README.md  MODULAR_MONOLITH_IMPLEMENTATION.md  MODULAR_MONOLITH_PLAN.md  Makefile  POSTGRESQL_VERIFICATION_REPORT.md  README.CN.md  README.Docker.md  README.md  README_ZH.md  REQUIREMENTS_VALIDATION.md  TEST_PLAN.md  alembic.ini  app.db  backend.dockerfile  celerybeat-schedule  create_all_tables_railway.py  (+18 more)
backend/alembic/: env.py
backend/app/: backend_pre_start.py  celery_app.py  celeryworker_pre_start.py  config.py  constants.py  crud.py  crudFuncs.py  crud_image.py  database.py  email_utils.py  enrichr.py  enums.py  generated_sqlmodels.py  i18n.py  initial_data.py  lesmee_models_complete.py  main.py  middleware.py  models.py  models_base.py  resume_parser.py  router.py  s3.py  scheduler.py  schemas.py  seed_data.py  template_utils.py  tests_pre_start.py  util.py  utils.py  worker.py
backend/app/alembic/: README  README_MODULAR.md  env.py  migration_template.py.mako
backend/app/api/: deps.py  main.py  rate_limit.py
backend/app/api_keys/: crud.py
backend/app/auth/: constants.py  dependencies.py  models.py  repository.py  router.py  routes.py  schemas.py  security.py  service.py
backend/app/config/: base.py  beta.py  development.py  prod.py
backend/app/core/: __init__.py  ai_client.py  analytics.py  auth.py  clerk_auth.py  config.py  database.py  db.py  engine.py  errors.py  events.py  exceptions.py  extractors.py  http_client.py  logging.py  middleware.py  nhost.py  nhost_client.py  openai.py  redis.py  s3.py  scheduler.py  security.py  session.py  supabase.py  telemetry.py  utils.py  websocket.py
backend/app/crud/: __init__.py  base.py  characters.py  conversations.py  item.py  items.py  otp.py  pbests.py  social.py  user.py  users.py  workouts.py
backend/app/db/: __init__.py  init_db.py  session.py
backend/app/files/: models.py  router.py  schemas.py  service.py
backend/app/items/: models.py  repository.py  router.py  routes.py  schemas.py  service.py
backend/app/model/: item_model.py  items.py  items_model.py  user_model.py  users.py
backend/app/models/: __init__.py  attachments.py  auth.py  base.py  base_model.py  blog.py  brand_ranking.py  brand_score.py  brand_visibility.py  brands.py  carousel_poster.py  club_visit.py  common.py  dashboard.py  datamodels.py  document.py  document_lock.py  entity.py  event.py  event_booking.py  event_offering.py  generics.py  group.py  group_wallet.py  group_wallet_topup.py  item.py  items.py  lookups.py  mcp_server.py  menu.py  menu_category.py  menu_item.py  misc.py  notifications.py  oauth.py  onboarding.py  order.py  order_item.py  patients.py  payment.py  (+17 more)
backend/app/models_/: menu.py  venue.py
backend/app/ocrs/: constants.py  service.py
backend/app/openfga/: fga-middleware.py  fgaMiddleware.py
backend/app/premium_users/: __init__.py  models.py  routes.py  service.py  stripe.py
backend/app/private/: router.py
backend/app/repositories/: __init__.py  base.py  generation_repository.py  item_repository.py  items.py  template_repository.py  users.py  (+1 more)
backend/data/: app.db
backend/erd/: __init__.py  discovery.py  entities.py  fields.py  generator.py  mermaid_validator.py  models.py  output.py  relationships.py  validation.py
backend/init-scripts/: 01-init.sql
backend/menu_scrapper/: test.py
backend/scripts/: __init__.py  add_sample_ai_souls.py  add_test_ai_souls.py  check_db.py  check_migration_safety.py  create_test_counselor.py  diagram.sh  docker_reset_users.py  entrypoint.sh  format.sh  generate_erd.py  generate_models.ps1  generate_models.sh  init_db.py  init_legal_system.py  lint.sh  migrate.py  prestart.sh  run-tests.sh  run_blackbox_tests.sh  seed_blog.py  seed_races.py  send_test_email.py  setup_db.sh  start.sh  test.sh  test_migrations.py  tests-start.sh
backend/tests/: conftest.py  test_api_integration.py  test_api_middleware.py  test_authentication.py  test_authorization.py  test_config.py  test_crud_operations.py  test_database.py  test_email_service.py  test_error_handling.py  test_external_services.py  test_file_handling.py  test_input_validation.py  test_items_api.py  test_logging.py  test_main.py  test_models_validation.py  test_pagination.py  test_password_recovery.py  test_performance.py  test_security.py  test_security_vulnerabilities.py  test_users_api.py  test_utils.py
backend/venv-x86/: pyvenv.cfg
backend_async/: Dockerfile  README.md  alembic.ini  pyproject.toml
backend_async/app/: backend_pre_start.py  crud.py  initial_data.py
backend_async/scripts/: test.sh
backend_async/tests/: conftest.py
{{cookiecutter.project_slug}}/app/: .gitignore  Dockerfile  backend.dockerfile  cov-start.sh  pyproject.toml
{{cookiecutter.project_slug}}/backend/: .dockerignore  .gitignore  Dockerfile  backend.dockerfile  celeryworker.dockerfile  gunicorn_conf.py  make-requirements.sh  pyproject.toml  requirements.txt  start-reload.sh  start.sh  tests.dockerfile
(+2737 files in other folders)
