[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["Admin <admin@example.com>"]

[tool.poetry.dependencies]
python = "^3.11"
uvicorn = "^0.22.0"
fastapi = "^0.97.0"
python-multipart = "^0.0.6"
pydantic = "^1.10.9"
email-validator = "^2.0.0.post2"
emails = "^0.6"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
tenacity = "^8.2.2"
gunicorn = "^20.1.0"
jinja2 = "^3.1.2"
alembic = "^1.11.1"
sqlalchemy = "^2.0.16"
pytest = "^7.3.2"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
httpcore = "^0.17.2"
psycopg2 = "^2.9.6"
asyncpg = "^0.27.0"
httpx = "^0.24.1"

[tool.poetry.group.dev.dependencies]
mypy = "^1.3.0"
isort = "^5.12.0"
autoflake = "^2.1.1"
flake8 = "^6.0.0"
pytest = "^7.3.2"
sqlalchemy-stubs = "^0.4"
pytest-asyncio = "^0.16.0"
pytest-cov = "^4.1.0"
black = "^23.3.0"
types-passlib = "^1.7.7.12"
types-python-jose = "^3.3.4.7"

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
line_length = 88

[build-system]
requires = ["poetry>=1.5.1"]
build-backend = "poetry.masonry.api"