[tool.poetry]
name = "{{cookiecutter.project_slug}}"
version = "{{cookiecutter.project_version}}"
description = ""
authors = [""]

[tool.poetry.dependencies]
python = "^3.7"
fastapi = "*"
uvicorn = "*"
pyjwt = "*"
python-multipart = "*"
email-validator = "*"
requests = "*"
celery = "*"
passlib = {extras = ["bcrypt"],version = "*"}
tenacity = "*"
pydantic = "*"
emails = "*"
raven = "*"
gunicorn = "*"
jinja2 = "*"
psycopg2-binary = "*"
alembic = "*"
sqlalchemy = "*"

[tool.poetry.dev-dependencies]
mypy = "*"
black = "*"
jupyter = "*"
isort = "*"
autoflake = "*"
flake8 = "*"
pytest = "*"
vulture = "*"

[build-system]
requires = ["poetry>=1.0"]
build-backend = "poetry.masonry.api"
